--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   flutter_svg: ^2.0.10+1
   dots_indicator: ^3.0.0
   flutter_rating_stars: ^1.1.0
+  hive: ^2.2.3
+  hive_generator: ^2.0.1
+  hive_flutter: ^1.1.0
+  path_provider:
 
 dev_dependencies:
   flutter_test:
