--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider:
   universal_web_image: ^0.1.0
+  badges: ^3.1.2
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -83,7 +85,7 @@ flutter:
   assets:
     - assets/images/
     - assets/app_icons/
-    - assets/jsons/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
