--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/
     - assets/app_icons/
     - assets/lottie/
+    - assets/svgs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
