--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   badges: ^3.1.2
   lottie: ^3.1.2
   avatar_glow: ^3.0.1
+  awesome_ripple_animation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,13 +64,16 @@ dev_dependencies:
   retrofit_generator: '>=7.0.0 <8.0.0'
   build_runner: '>=2.3.0 <4.0.0'
   json_serializable: ^6.6.2
-
+  flutter_native_splash: ^2.4.1
+flutter_native_splash:
+  image: assets/app_icons/foreground.png
+  color: "#fdc202"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  # flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
